--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/Index.cshtml
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-12 mb-5">
         <div class="text-center">
-            <h1 class="display-4">PDF, Excel, CSV Export App</h1>
+            <h1 class="display-4">PDF, Excel, CSV Export</h1>
         </div>
     </div>
     <div class="col-3">
@@ -21,6 +21,24 @@
         @*<button id="btnExportToCsv" class="btn btn-info">Export To CSV</button>*@
         <button id="btnExportCsv" data-href="@Url.Action("ExportCsv","Home",new {})" class="btn btn-info"><i class="fa fa-download"></i> Export To CSV</button>
         @*<a id="btnExportCsv" href="@Url.Action("ExportCsv","Home",new {})" class="btn btn-info"><i class="fa fa-download"></i> Export To CSV</a>*@
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-12 mt-5 mb-5">
+        <div class="text-center">
+            <h1 class="display-4">Captcha</h1>
+        </div>
+    </div>
+    <div class="col-3">
+        <a href="/Home/CreateProduct" id="" class="btn btn-info">DNT Captcha</a>
+    </div>
+    <div class="col-3">
+        <a href="/Home/CreateProduct" id="" class="btn btn-info">re Captcha</a>
+    </div>
+    <div class="col-3">
+    </div>
+    <div class="col-3">
     </div>
 </div>
 
