--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/wwwroot/css/site.css
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/wwwroot/css/site.css
@@ -128,3 +128,12 @@ body {
         outline: 0;
         box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.4);
     }
+
+.dntCaptcha .btn-refresh {
+    padding: 24px;
+    margin: 5px;
+    background-image: url(../images/refresh.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+}
