--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/_ViewImports.cshtml
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using lab.PDFExcelCSVExportApp
 @using lab.PDFExcelCSVExportApp.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, DNTCaptcha.Core
