Added Custom Captcha - 01

--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/Index.cshtml
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/Index.cshtml
@@ -31,10 +31,10 @@
         </div>
     </div>
     <div class="col-3">
-        <a href="/Home/CreateProduct" id="" class="btn btn-info">DNT Captcha</a>
+        <a href="/Home/DNTCaptcha" id="" class="btn btn-info">DNT Captcha</a>
     </div>
     <div class="col-3">
-        <a href="/Home/CreateProduct" id="" class="btn btn-info">re Captcha</a>
+        <a href="/Home/AppCaptcha" id="" class="btn btn-info">App Captcha</a>
     </div>
     <div class="col-3">
     </div>
