--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/AppCaptcha.cshtml
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/AppCaptcha.cshtml
@@ -74,7 +74,7 @@
             <input id="CaptchaId" name="CaptchaId" type="hidden" />
             <input id="CaptchaToken" name="CaptchaToken" type="hidden" />
         </div>
-    </div>>
+    </div>
 </div>
 
 @section Scripts {
