--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/DNTCaptcha.cshtml
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/DNTCaptcha.cshtml
@@ -95,10 +95,10 @@
             <div class="field-validation-valid" data-valmsg-for="DNTCaptchaInputText" data-valmsg-replace="true"></div>
             <input id="DNTCaptchaToken" name="DNTCaptchaToken" type="hidden" />
         </div>
-    </div>>
+    </div>
 </div>
 
-<div class="col-xl-12 col-lg-12 col-md-12"><div id="dntCaptchaContent" style="display: none;"><div class="dntCaptcha"><img alt="captcha" id="dntCaptchaImg" name="dntCaptchaImg" /><a id="dntCaptchaRefreshButton" name="dntCaptchaRefreshButton" onclick="App.RefreshDNTCaptcha();"></a><input id="DNTCaptchaText" name="DNTCaptchaText" type="hidden" /><input autocomplete="off" class="form-control" data-val="true" data-val-required="Please enter the security code as a number." dir="ltr" id="DNTCaptchaInputText" name="DNTCaptchaInputText" placeholder="Security Code" required="required" type="text" /><div class="field-validation-valid" data-valmsg-for="DNTCaptchaInputText" data-valmsg-replace="true"></div><input id="DNTCaptchaToken" name="DNTCaptchaToken" type="hidden" /></div></div>></div>
+<div class="col-xl-12 col-lg-12 col-md-12"><div id="dntCaptchaContent" style="display: none;"><div class="dntCaptcha"><img alt="captcha" id="dntCaptchaImg" name="dntCaptchaImg" /><a id="dntCaptchaRefreshButton" name="dntCaptchaRefreshButton" onclick="App.RefreshDNTCaptcha();"></a><input id="DNTCaptchaText" name="DNTCaptchaText" type="hidden" /><input autocomplete="off" class="form-control" data-val="true" data-val-required="Please enter the security code as a number." dir="ltr" id="DNTCaptchaInputText" name="DNTCaptchaInputText" placeholder="Security Code" required="required" type="text" /><div class="field-validation-valid" data-valmsg-for="DNTCaptchaInputText" data-valmsg-replace="true"></div><input id="DNTCaptchaToken" name="DNTCaptchaToken" type="hidden" /></div></div></div>
 
 <form class="justify-content-center" data-ajax="true" data-ajax-begin="App.LoaderShow();" data-ajax-complete="App.LoaderHide();" data-ajax-failure="App.LoaderHide();" data-ajax-success="App.AjaxFormPostSuccess(data); App.AjaxFormReset('employment-application-form'); App.RefreshDNTCaptcha();" data-ajax-url="/Employment/Application" id="employment-application-form" method="post" novalidate="novalidate">
 </form>*@
