--- a/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/Index.cshtml
+++ b/lab.PDFExcelCSVExportApp/lab.PDFExcelCSVExportApp/Views/Home/Index.cshtml
@@ -43,6 +43,23 @@
 </div>
 
 <div class="row">
+    <div class="col-12 mt-5 mb-5">
+        <div class="text-center">
+            <h1 class="display-4">QR/Bar Code</h1>
+        </div>
+    </div>
+    <div class="col-3">
+        <a href="/Home/QrBarCodeFromPdf" id="" class="btn btn-info">QR/Bar Code From PDF</a>
+    </div>
+    <div class="col-3">
+    </div>
+    <div class="col-3">
+    </div>
+    <div class="col-3">
+    </div>
+</div>
+
+<div class="row">
     <div class="col-12 mt-5">
         <table id="dataTablesProduct" class="table" style="width:100%"></table>
     </div>
@@ -310,7 +327,7 @@
             });
 
             $Product.bindProductEvents();
-            $Product.loadDataTables('dataTablesProduct', 10, ("/Home/GetDataAsync"));
+            $Product.loadDataTables('dataTablesProduct', 10, ("/Home/GetDataTableAjax"));
         });
 
     </script>
